# Iris

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  notify.rs  paths.rs
src/bridge/: activation.rs  mod.rs  niri_conn.rs  pinned.rs  proto.rs  sampler.rs  server.rs  state.rs
src/client/: mod.rs  proto_re.rs
src/pin/: mod.rs
src/scratchpad/: mod.rs
src/snapshot/: load.rs  matcher.rs  mod.rs  save.rs  schema.rs  store.rs  template.rs
src/snapshot/hooks/: browser.rs  generic.rs  mod.rs  neovim.rs  terminal.rs  vscode.rs
src/time/: mod.rs
